# utterless

./: .gitignore  Makefile  README.md  demo.py  setup.cfg
tests/: suite_failed.py  suite_good.py  suite_too_many_placeholders.py  test_subprocesses.py
utterless/: __init__.py  __main__.py
