# vim:ft=dosini:

[metadata]
name = utterless
version = attr:utterless.__version__
url = https://github.com/pscl4rke/utterless
description = Extend Python's "unittest" to better handle "logging" messages 
long_description = file:README.md
long_description_content_type = text/markdown
author = P. S. Clarke
author_email = utterless@pscl4rke.net
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Unit
    Topic :: System :: Logging
    Topic :: Utilities

[options]
packages = utterless
